--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ページのタイトル</title>
+    
+    <link rel="stylesheet" href="e2a.css">
 
+</head>
+<body>
+
+    <h1>こんにちは、世界！</h1>
+    <p>これはHTMLのひな型です。CSSでデザインが適用されています。</p>
+
+</body>
+</html>
