--- a/index.html
+++ b/index.html
@@ -3,15 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ページのタイトル</title>
-    
-    <link rel="stylesheet" href="e2a.css">
+    <title>ようこそ、魅力あふれる鎌ヶ谷市へ！</title>
+    <style>
+        /* Copilot生成CSS: 内部スタイルシートで基本的なデザインを定義 */
+        body {
+            font-family: 'Hiragino Sans', 'Meiryo', sans-serif;
+            background-color: #fcf8f0; /* 薄いベージュの背景 */
+            color: #333333; /* 濃い文字色 */
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
 
+        header {
+            background-color: #38761d; /* 濃い緑色（梨をイメージ） */
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 30px auto;
+            padding: 0 20px;
+        }
+
+        h1 {
+            margin-bottom: 5px;
+        }
+
+        h2 {
+            color: #7c4819; /* 落ち着いた茶色 */
+            border-bottom: 3px solid #ffcc00; /* 梨の黄色をイメージしたライン */
+            padding-bottom: 5px;
+            margin-top: 40px;
+        }
+
+        section {
+            background-color: white;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        ul {
+            list-style: disc;
+            margin-left: 20px;
+        }
+
+        /* レスポンシブ対応の考慮 */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.8em;
+            }
+            .container {
+                margin: 15px auto;
+            }
+        }
+    </style>
 </head>
 <body>
 
-    <h1>こんにちは、世界！</h1>
-    <p>これはHTMLのひな型です。CSSでデザインが適用されています。</p>
+    <header>
+        <h1>千葉県 鎌ヶ谷市 - 都会と自然が調和する街</h1>
+        <p>住むにも訪れるにも魅力的な「かまがや」をご紹介します。</p>
+    </header>
+
+    <div class="container">
+
+        <section id="access-nature">
+            <h2>🚄 交通の良さ と 🌳 豊かな自然のバランス</h2>
+            <ul>
+                <li>**都心へのアクセス**: 新鎌ヶ谷駅から3路線利用可能。都心や成田空港へのアクセスが抜群で、生活の利便性が高いです。</li>
+                <li>**穏やかな住環境**: 都会的な利便性を持ちながら、貝柄山公園をはじめとする緑地が多く、落ち着いた環境です。</li>
+                <li>**スポーツの街**: 北海道日本ハムファイターズの二軍施設（鎌ヶ谷スタジアム）があり、プロ野球が身近に感じられます。</li>
+            </ul>
+        </section>
+
+        <section id="products-gourmet">
+            <h2>🍐 鎌ヶ谷が誇る特産品と地元グルメ</h2>
+            <ul>
+                <li>**鎌ヶ谷梨**: 全国的に有名な特産品。特に夏のシーズンには、新鮮でジューシーな梨を直売所で購入できます。</li>
+                <li>**隠れた名店**: 市民に愛される昔ながらの和菓子屋や、個性的なカフェ、地元食材を活かしたレストランが点在しています。</li>
+            </ul>
+        </section>
+
+        <section id="history-community">
+            <h2>📜 歴史の面影 と 🤝 活発な地域交流</h2>
+            <ul>
+                <li>**開拓の歴史**: 江戸時代からの開墾の歴史があり、地名などにその面影が残っています。歴史散策も楽しめます。</li>
+                <li>**市民が主役**: 鎌ヶ谷市民まつりなど、地域住民が一体となって企画・参加するイベントが多く、活発なコミュニティがあります。</li>
+            </ul>
+        </section>
+        
+        <p style="text-align: center; margin-top: 50px; padding-bottom: 20px;">
+            このウェブサイトを通じて、鎌ヶ谷市の魅力をさらに知ってください！
+        </p>
+
+    </div>
 
 </body>
 </html>
